# foundry-cost-aware-model-routing

./: .dockerignore  .env.sample  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: ci.yml  docs.yml
docs/: honesty.md  index.md
docs/lab-notebook/: 01-hero.md  02-curated.md  03-coverage-cliff.md  04-no-free-lunch.md  05-ensemble-fanout.md  06-fanout-dial.md  07-model-router.md  08-arena.md  09-live-routing-proof.md  10-measured-ledger.md  devlog.md  index.md  story-arc.md
docs/manual/: cli.md  concept.md  dashboard.md  experiment-atlas.md  experiments.md  fleet.md  foundry-live.md  foundry-setup.md  head-to-head.md  install.md  ledger.md  metrics.md
evals/: baselines.py  run.py
experiments/: README.md  adaptive.yaml  curated.yaml  ensemble.yaml  hero.yaml  limits.yaml  model-router.yaml
scripts/: build_experiment_gifs.py  build_measured_ledger_sample.py  build_static_site.py  validate-local.sh
tests/: test_adaptive.py  test_arena.py  test_budget_replay_eval.py  test_build_static_site.py  test_catalog.py  test_cli.py  test_coverage_cliff.py  test_ensemble.py  test_experiment.py  test_fleet.py  test_foundry_arena.py  test_foundry_live.py  test_ledger.py  test_limits.py  test_measured_ledger.py  test_metrics.py  test_model_router.py  test_policy.py  test_policy_cli.py  test_policy_injection.py  test_regression.py  test_replay.py  test_select.py  test_server.py  test_signals.py  test_spotlight.py  test_synth.py
(+55 files in other folders)
