[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foundry-cost-router"
version = "0.1.0"
description = "Model-routing experiment scaffold."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hyeonsang Jeon" }]
keywords = ["model-routing", "llmops"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[project.scripts]
cost-router = "router.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
policy = ["*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "samples", "evals", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Inline HTML/CSS/JS template: line-length is not meaningful for markup.
"src/router/dashboard.py" = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
